# payment-transaction

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
fastapi_app/: __init__.py  alternative_run_appl.py  app.py  init.py
fastapi_app/authentication/: __init__.py  create_token.py  jwt_utils.py  token_utils.py
fastapi_app/configs/: __init__.py  a_session_conf.py  a_test_session_conf.py  main_conf.py
fastapi_app/database/: __init__.py  async_generator.py
fastapi_app/dependencies/: __init__.py  check_permission.py  db_session.py  get_account.py  get_all_info.py  get_payment.py  get_user.py  get_user_repo.py  user_condition.py
fastapi_app/exceptions/: __init__.py  general_exc.py
fastapi_app/models/: __init__.py  account.py  base.py  payment.py  permission.py  resource.py  role.py  role_permission.py  user.py  user_role.py
fastapi_app/repositories/: __init__.py  account_repo.py  all_info_repo.py  payment_repo.py  permission_repo.py  resource_repo.py  role_repo.py  user_repo.py
fastapi_app/routes/: __init__.py  account.py  admin_distribution.py  auth.py  jwt.py  payment.py
fastapi_app/schemas/: __init__.py  account.py  all_users_position.py  auth.py  payment.py  permission.py  resource.py  role.py  user.py  users_info.py
fastapi_app/services/: __init__.py  account_service.py  all_info_service.py  auth_service.py  payment_servise.py  permission.py  user_service.py
migrations/: env.py
tests/: __init__.py  conftest.py
(+21 files in other folders)
